--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "scripts": {
     "start": "node dist/src/shared/infra/http/server.js",
     "typeorm": "MIGRATION=TRUE node ./node_modules/typeorm/cli.js -d ./dist/src/shared/infra/typeorm/index.js",
+    "migration:create" : "./node_modules/typeorm/cli.js migration:create",
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules ./src/shared/infra/http/server.ts",
     "build": "yarn babel src --extensions \".js,.ts\" --out-dir dist/src --copy-files --no-copy-ignored",
     "test": "jest",
     "seed:admin": "ts-node-dev -r tsconfig-paths/register ./src/shared/infra/typeorm/seed/admin.ts",
     "seed:admin.prod":"node ./dist/src/shared/infra/typeorm/seed/admin.js",
     "docs:build": "ts-node-dev -r tsconfig-paths/register ./src/docs/build.ts",
-    "perf": "ts-node-dev -r tsconfig-paths/register ./src/shared/infra/typeorm/tests/users/createUser.performance.ts"
   },
   "heroku-run-build-script": true,
   "repository": "https://github.com/kortkamp/template-node-api.git",
