--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest",
     "seed:admin": "ts-node-dev -r tsconfig-paths/register ./src/shared/infra/typeorm/seed/admin.ts",
     "seed:admin.prod":"node ./dist/src/shared/infra/typeorm/seed/admin.js",
+    "seed:grades.prod":"node ./dist/src/shared/infra/typeorm/seed/grades.js",
     "docs:build": "ts-node-dev -r tsconfig-paths/register ./src/docs/build.ts",
     "cp-module": "./src/bin/cp-module"
   },
