--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "build": "yarn babel src --extensions \".js,.ts\" --out-dir dist/src --copy-files --no-copy-ignored",
     "test": "jest",
     "seed:admin": "ts-node-dev -r tsconfig-paths/register ./src/shared/infra/typeorm/seed/admin.ts",
+    "seed:segments": "ts-node-dev -r tsconfig-paths/register ./src/shared/infra/typeorm/seed/segments.ts",
     "seed:admin.prod":"node ./dist/src/shared/infra/typeorm/seed/admin.js",
-    "seed:grades.prod":"node ./dist/src/shared/infra/typeorm/seed/grades.js",
+    "seed:segments.prod":"node ./dist/src/shared/infra/typeorm/seed/segments.js",
     "docs:build": "ts-node-dev -r tsconfig-paths/register ./src/docs/build.ts",
     "cp-module": "./src/bin/cp-module"
   },
